test/lattests/extensions/objects1/bad/duplicateMethods.lat
class a {
    int foo(int x) { return 0; }
    int foo(boolean x) { return 0; }
}